// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chinese-japanese.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

nasalカ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ゛、ヲ゛）も行われたが、一般的にはならなかった。

=====================================output=====================================
這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長
很長的段落

全　　形　空白全　　形　空白全　　形　空白全　　形　空白全　　形　空白
全　　形　空白全　　形　空白

空白全形空白全形空白全形空白　空白全形空白全形空白全形空白　空白全形空白全形空白
全形空白　空白全形空白全形空白全形空白

何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは記憶している。

カ゚キ゚ク゚ケ゚コ゚でガギグゴ

nasalカ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚
ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚
ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚カ゚キ゚ク゚ケ゚コ゚

かつてはワ行のワ、ヰ、ヱ、ヲに濁点を付して [v] 音を表現すること（ワ゛、ヰ゛、ヱ
゛、ヲ゛）も行われたが、一般的にはならなかった。

================================================================================
`;

exports[`han-kana-alnum.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？

MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！

Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。

=====================================output=====================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段
Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的
一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中
文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合
著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English
混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個
English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是
一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！
這是一個English混合著中文的一段Paragraph！

Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語
が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざった
Paragraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れ
た！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierはど
うする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？English
と日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざっ
たParagraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現
れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れた！Prettierは
どうする？Englishと日本語が混ざったParagraphが現れた！Prettierはどうす
る？Englishと日本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日
本語が混ざったParagraphが現れた！Prettierはどうする？Englishと日本語が混ざった
Paragraphが現れた！Prettierはどうする？Englishと日本語が混ざったParagraphが現れ
た！Prettierはどうする？

MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイ
コー！MarkdownフォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierは
サイコー！MarkdownフォーマッターPrettierはサイコー！Markdownフォーマッター
Prettierはサイコー！MarkdownフォーマッターPrettierはサイコー！Markdownフォーマッ
ターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！Markdownフォー
マッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイコー！Markdown
フォーマッターPrettierはサイコー！MarkdownフォーマッターPrettierはサイ
コー！MarkdownフォーマッターPrettierはサイコー！

Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit是在
2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的
第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われま
した。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11
月29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初の
Commitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29
日。Prettierの最初のCommitは2016年11月29日に行われました。Prettier的第一次Commit
是在2016年11月29日。Prettierの最初のCommitは2016年11月29日に行われまし
た。Prettier的第一次Commit是在2016年11月29日。Prettierの最初のCommitは2016年11月
29日に行われました。Prettier的第一次Commit是在2016年11月29日。Prettierの最初の
Commitは2016年11月29日に行われました。Prettier的第一次Commit是在2016年11月29日。

================================================================================
`;

exports[`korean.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

한국어와 English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다.
한국어와
English를
섞어
보았습니다.
한국어와
English를
섞어
보았습니다.
한국어와 English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다.
한국어와
English를
섞어
보았습니다.
한국어와
English를
섞어
보았습니다.
한국어와 English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다.

NVIDIA의 RTX3000 시리즈는 삼성전자와 TSMC에 의해 제조된다.
NVIDIA의 RTX3000 시리즈는 삼성전자와 TSMC에 의해 제조된다.
NVIDIA의
RTX3000
시리즈는
삼성전자와
TSMC에
의해
제조된다.
NVIDIA의 RTX3000 시리즈는 삼성전자와 TSMC에 의해 제조된다.
NVIDIA의 RTX3000 시리즈는 삼성전자와 TSMC에 의해 제조된다.

대한민국(듣기 (도움말·정보), 大韓民國, 영어: Republic of Korea; ROK[3])은 동아시아의 한반도 중남부에 있는 공화국이다.

서쪽으로는 서해를 사이에 두고 중화인민공화국이, 동쪽으로는 동해를 사이에 두고 일본이 있으며
북쪽으로는 조선민주주의인민공화국과 맞닿아 있다.

역대 대통령은 李承晩 과 許政 과 尹潽善 과 朴正熙 과 崔圭夏 과 朴忠勳 과 全斗煥 과 盧泰愚 과 金泳三 과 金大中 과 盧武鉉 과 李明博 과 朴槿惠 과 文在寅 과 尹錫悅 과 음...
역대 대통령은
李承晩
과
許政
과
尹潽善
과
朴正熙 과
崔圭夏 과
朴忠勳 과
全斗煥 과
盧泰愚 과
金泳三
과 金大中
과 盧武鉉
과 李明博
과 朴槿惠
과 文在寅
과 尹錫悅 과
음...

역대 대통령은 李承晩과 許政과 尹潽善과 朴正熙과 崔圭夏과 朴忠勳과 全斗煥과 盧泰愚과 金泳三과 金大中과 盧武鉉과 李明博과 朴槿惠과 文在寅과 尹錫悅과 음... 역대 대통령은 李承晩과 許政과 尹潽善과 朴正熙과 崔圭夏과 朴忠勳과 全斗煥과 盧泰愚과 金泳三과 金大中과 盧武鉉과 李明博과 朴槿惠과 文在寅과 尹錫悅과 음...

=====================================output=====================================
예문Latin예문Latin 예문Latin예문 Latin예문Latin 예문 Latin 예문

한국어와 English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다. 한국어와
English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다. 한국어와
English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다. 한국어와
English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다. 한국어와
English를 섞어 보았습니다. 한국어와 English를 섞어 보았습니다.

NVIDIA의 RTX3000 시리즈는 삼성전자와 TSMC에 의해 제조된다. NVIDIA의 RTX3000
시리즈는 삼성전자와 TSMC에 의해 제조된다. NVIDIA의 RTX3000 시리즈는 삼성전자와
TSMC에 의해 제조된다. NVIDIA의 RTX3000 시리즈는 삼성전자와 TSMC에 의해 제조된다.
NVIDIA의 RTX3000 시리즈는 삼성전자와 TSMC에 의해 제조된다.

대한민국(듣기 (도움말·정보), 大韓民國, 영어: Republic of Korea; ROK[3])은
동아시아의 한반도 중남부에 있는 공화국이다.

서쪽으로는 서해를 사이에 두고 중화인민공화국이, 동쪽으로는 동해를 사이에 두고
일본이 있으며 북쪽으로는 조선민주주의인민공화국과 맞닿아 있다.

역대 대통령은 李承晩 과 許政 과 尹潽善 과 朴正熙 과 崔圭夏 과 朴忠勳 과 全斗煥
과 盧泰愚 과 金泳三 과 金大中 과 盧武鉉 과 李明博 과 朴槿惠 과 文在寅 과 尹錫悅
과 음... 역대 대통령은 李承晩 과 許政 과 尹潽善 과 朴正熙 과 崔圭夏 과 朴忠勳 과
全斗煥 과 盧泰愚 과 金泳三 과 金大中 과 盧武鉉 과 李明博 과 朴槿惠 과 文在寅 과
尹錫悅 과 음...

역대 대통령은 李承晩과 許政과 尹潽善과 朴正熙과 崔圭夏과 朴忠勳과 全斗煥과 盧泰
愚과 金泳三과 金大中과 盧武鉉과 李明博과 朴槿惠과 文在寅과 尹錫悅과 음... 역대
대통령은 李承晩과 許政과 尹潽善과 朴正熙과 崔圭夏과 朴忠勳과 全斗煥과 盧泰愚과
金泳三과 金大中과 盧武鉉과 李明博과 朴槿惠과 文在寅과 尹錫悅과 음...

================================================================================
`;

exports[`link.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

=====================================output=====================================
[這是一段很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長很長的段落][]

================================================================================
`;

exports[`mixed.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！

=====================================output=====================================
這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段
Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中文的
一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合著中
文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English混合
著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個English
混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是一個
English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！這是
一個English混合著中文的一段Paragraph！這是一個English混合著中文的一段Paragraph！
這是一個English混合著中文的一段Paragraph！

================================================================================
`;

exports[`space.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！

=====================================output=====================================
這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！這是一個 English 混合著中文的一段
Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個 English 混合著
中文的一段 Paragraph！這是一個 English 混合著中文的一段 Paragraph！這是一個
English 混合著中文的一段 Paragraph！

================================================================================
`;

exports[`symbolSpaceNewLine.md - {"proseWrap":"always"} format 1`] = `
====================================options=====================================
parsers: ["markdown"]
printWidth: 80
proseWrap: "always"
                                                                                | printWidth
=====================================input======================================
日本語
、
にほんご
。
汉语,
中文.
日
本
語
，
に
ほ
ん
ご
．
English
words!?
漢字
！
汉字
？
「セリフ」
(括弧)
文字
（括弧）
文字
【括弧】
日本語
English

「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）」
「禁則（きんそく）処理（しょり）」
「禁則（きんそく）処理（しょり）！！！！」
「禁則（きんそく）処理（しょり）！！！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」

中点
・
中点

禁則処理にわざと違反した文章のテストを今から行います。準備はいいでしょうか？レデ
ィ、ゴー！

[ウ
ィキペディア]

[ウ
ィキペディア]: https://ja.wikipedia.org/

=====================================output=====================================
日本語、にほんご。汉语, 中文. 日本語，にほんご．English words!? 漢字！汉字？「セ
リフ」(括弧) 文字（括弧）文字【括弧】日本語English

「禁則（きんそく）処理（しょり）！」「禁則（きんそく）処理（しょり）！」「禁則
（きんそく）処理（しょり）！」「禁則（きんそく）処理（しょり）」「禁則（きんそ
く）処理（しょり）！」「禁則（きんそく）処理（しょり）！」「禁則（きんそく）処理
（しょり）」「禁則（きんそく）処理（しょり）」「禁則（きんそく）処理（しょ
り）！！！！」「禁則（きんそく）処理（しょり）！！！」「禁則（きんそく）処理
（しょり）！」「禁則（きんそく）処理（しょり）！」「禁則（きんそく）処理（しょ
り）！」「禁則（きんそく）処理（しょり）！」「禁則（きんそく）処理（しょり）！」
「禁則（きんそく）処理（しょり）！」

中点・中点

禁則処理にわざと違反した文章のテストを今から行います。準備はいいでしょうか？レ
ディ、ゴー！

[ウ ィキペディア]

[ウ ィキペディア]: https://ja.wikipedia.org/

================================================================================
`;
